# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-gui-2.2.23 (05 Sep 2011)

  05 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.23.ebuild:
  Version bump

*calculate-install-gui-2.2.22 (26 Aug 2011)

  26 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.22.ebuild:
  Version bump

*calculate-install-gui-2.2.21 (18 Aug 2011)

  18 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.21.ebuild:
  Bump version

*calculate-install-gui-2.2.20-r1 (17 Aug 2011)

  17 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.20-r1.ebuild:
  Update for bugfix

*calculate-install-gui-2.2.20 (27 Jul 2011)

  27 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.20.ebuild:
  Bump version

*calculate-install-gui-2.2.19 (18 Jul 2011)

  18 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.19.ebuild:
  Bump version

*calculate-install-gui-2.2.17 (22 Jun 2011)

  22 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.17.ebuild:
  Bump version

  09 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.13.ebuild, -calculate-install-gui-2.2.14.ebuild,
  +calculate-install-gui-2.2.16.ebuild:
  Remove old

*calculate-install-gui-2.2.16 (09 Jun 2011)

  09 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.16.ebuild:
  Bump version

*calculate-install-gui-2.2.15 (18 May 2011)

  18 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.15.ebuild:
  Bump version.

  20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.14.ebuild:
  Fix inherit.

*calculate-install-gui-2.2.14 (20 Apr 2011)
