@@ -5,6 +5,7 @@ DIST calculate-install-gui-2.2.20.tar.bz2 153955 RMD160 93dcd0fd155d480cac951e66
 DIST calculate-install-gui-2.2.21.tar.bz2 154006 RMD160 ac2e445a7f6e39025c21f57cd0ba10ca813f6480 SHA1 5bba63ebbead79ccc3be2c35a787a6640e04c3e6 SHA256 70b3f97cd1e1a1ae47b0ea5b7f07f44c8fb138a03e2e83f6233a7799493da0ff
 DIST calculate-install-gui-2.2.22.tar.bz2 154025 RMD160 59d56755cbc5aa713669ea3e6ac5731cb767e140 SHA1 59cbd5b6cd7ab3dec552a47188f8c82ee8c8c616 SHA256 e8a542196b21fb71ef2f025f7ed17bd0504fa667877a85190ed0eeb9e1f954ca
 DIST calculate-install-gui-2.2.23.tar.bz2 153959 RMD160 e8b1b87366b304540692f3df4d1533af45f11efc SHA1 a967dcba2216e02c7c3364938f1ae1b7d6cf2f8d SHA256 bc72ef07f46541ec29030134b588316f881d8366fa244f8d3e52dbcf4c27b64d
+DIST calculate-install-gui-2.2.24.tar.bz2 153936 RMD160 f95d49f0e256b09eb63ced5a439f5083e065161d SHA1 01e18ae3e7b4b4f9b274b007e05fed16b7cb0381 SHA256 0e8588943d7bd7539ec42fe8a2db1a403b9084acb6b79e9a556ecbf76ff6d633
 EBUILD calculate-install-gui-2.2.18.ebuild 711 RMD160 7395f07595ce8867cee5e1902fefad0e389040f3 SHA1 dffb55a5bc1a5720cc31ded1bdc7c766e1fcfd66 SHA256 eae2087fe72dc874baa2aebcc22e48d8bc67d89c6c9b074614e6e4a26e55a6be
 EBUILD calculate-install-gui-2.2.19.ebuild 711 RMD160 8af259a4e3182047cefb2e278f1e5d320e48dffc SHA1 4d8bee11057da1f32c2c2a5474576479fd23a952 SHA256 9c770270807a248f7efaf35408d0d9c0bd41abcaad724eaa873c46a9d54f51cb
 EBUILD calculate-install-gui-2.2.20-r1.ebuild 865 RMD160 84f68f4911d47f50ce2904697879d0c6f1b52770 SHA1 6d02c9db12398bc5f77600e45b8343362d5389be SHA256 7d5e8012dd9a90f08607da3305228b2787aab43d4a552254d7544ec56ff7db92
@@ -12,6 +13,7 @@ EBUILD calculate-install-gui-2.2.20.ebuild 711 RMD160 93f0f1ffd960d4bcfd35d5a90a
 EBUILD calculate-install-gui-2.2.21.ebuild 711 RMD160 260c3703e2642bf427ed502cfa09fa9e13ef539c SHA1 a66e75aed6060fd08a465a295d6ba424dbcf3f8b SHA256 d840349e9010f64b90f6932d2e633ac2a2c50940ab2e0f0edeaa4e2565486c3d
 EBUILD calculate-install-gui-2.2.22.ebuild 711 RMD160 f8548cd52d08e8eefb58993542b1caa20bed9768 SHA1 176a82e82c9acca1b7190f784834db2bd4a7b4a1 SHA256 25fb879c46371d511b9719ac4df3a19091324aef4922be8194c289c9efd8b5fd
 EBUILD calculate-install-gui-2.2.23.ebuild 711 RMD160 a760489a2879cb9b4c988f0b9cecf0bf0fb7a028 SHA1 6a4ae9fcb04d2a97c8ab8b3d06b0117885dee1bb SHA256 d299e4e3b444dbe16000a93227b041b79e229ffd163dbf7088d12954e92d3e93
+EBUILD calculate-install-gui-2.2.24.ebuild 711 RMD160 f76dd4adbb58163a4e5b981538d4444b44b5eb93 SHA1 7dd3338e783ee7a3509af539908c49193ab73141 SHA256 8e8b833747a0e9eadf4cd3b63750817c2b62f5e68e62c48b5e87ce0fea7f75b5
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 289147616569eab7f8e75b85db63a87115b96085 SHA1 d885c8cf7bd5290ec2f5bcb0c17baccf596bda35 SHA256 ddc01795d391e954300ac322c1da4ed4c67f13a30739c70437802be8f0a52a81
-MISC ChangeLog 14944 RMD160 b7a147edee9dad2b90194f85debfdc0ccd200a44 SHA1 4408fcd8256d74029dc6041f4c07448198a7b18e SHA256 343216bd3626002bfd56ab9c11c3a1238be744cd3f10b283f0e5a7de5a4b89eb
+MISC ChangeLog 15122 RMD160 5736c69a51b3d7ecfb6e31acb7e6f825ca6d3e32 SHA1 8f6be2656242ef7f625ff996645abad7eee18699 SHA256 b20a7928f384dd70785ee019089e0953329944ded9314d852a7bdb1a539d7e3d
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
