@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.24 (20 Sep 2011)
+
+  20 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-install-gui-2.2.24.ebuild:
+  Restore calculate-install-gui
+
 *calculate-install-gui-2.2.23 (05 Sep 2011)
 
   05 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
